2004-05-26 11:46  sisoft

	* configure.in, src/binkp.c, src/crc.h, src/daemon.c, src/md5.c,
	  src/qcc.c, src/qctl.c:

	last fix for --with-config.
	other small changes.

2004-05-24 07:21  sisoft

	* Changes, INSTALL, README, qico.conf.sample, debian/qctl.8,
	  src/Makefile.am, src/binkp.c, src/clserv.c, src/clserv.h,
	  src/daemon.c, src/ftn.c, src/ftn.h, src/qcc.c, src/qconf.x,
	  src/qctl.c, src/tcp.c, src/tools.c, src/tools.h, src/xstr.c,
	  src/xstr.h:

	[no log message]

2004-05-21 18:15  sisoft

	* debian/.cvsignore, debian/changelog, debian/rules, src/daemon.c,
	  src/qctl.c:

	fix several bugs in qctl.
	try to fix daemon hung under *BSD.

2004-05-19 13:52  sisoft

	* Changes, configure.in, qico.conf.sample, src/config.c, src/ftn.c,
	  src/ls_zreceive.c, src/ls_zsend.c:

	next try to fix configure error (without --with-config).
	now C++ style comments are allowed in config (//).
	fix crash if z[tr]xwin keywords used.

2004-05-18 02:29  sisoft

	* Changes, FAQ, configure.in, qico.conf.sample, debian/qcc.8,
	  debian/qctl.8, src/clserv.c, src/clserv.h, src/daemon.c,
	  src/emsi.c, src/main.c, src/qcc.c, src/qctl.c, src/tools.c,
	  src/ver.c.in:

	remove -cvs suffix from version.
	fix charset recoding.
	now qcc and qctl may connect on any host (option '-a').

2004-04-17 11:25  sisoft

	* Changes, INSTALL, configure.in, src/binkp.c, src/main.c,
	  src/nodelist.c, src/protfm.c, src/session.c:

	fix binkp voracious (last byte).
	configure: another fix configuration without --with-config.
	configure: add --disable-binkp option.
	add file INSTALL.

2004-04-15 02:21  sisoft

	* src/: binkp.c, log.c, qcc.c, tcp.c:

	show milliseconds in logtime if loglevel T >= 1.

2004-04-13 21:37  sisoft

	* Changes, qico.conf.sample, src/binkp.c, src/config.c,
	  src/daemon.c, src/ftn.c, src/main.c, src/qcc.c, src/qconf.x,
	  src/tools.c, src/tools.h:

	in qcc: now screen splitted at: lines>=20?10:lines/2.
	improve config parsing error reports.