@@ -1,1 +1,1 @@
-char cvsdate[]="2004-05-27 22:49";
+char cvsdate[]="2004-05-28 08:14";
